crates/easyofd/tests/compile_fail/derive_out_of_range_float.rs
use easyofd::OfdModel;

#[derive(OfdModel)]
struct OutOfRangeWeight {
    #[ofd(x = 0.0, y = 0.0, weight = -1.0)]
    text: String,
}

fn main() {}
